fix: overflow scroll

--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -26,6 +26,10 @@
   &::-webkit-scrollbar-button {
     @apply hidden;
   }
+
+  @screen md {
+    overflow: inherit;
+  }
 }
 
 table {
